2005-09-22  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gstbuffer.override:
	Revert Buffer.caps change, since wingo fixed it upstream

2005-09-22  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gstbuffer.override:
	Increment the refcount when fetching GST_BUFFER_CAPS. 
	Python gurus, please fix if there's a better way this should be done.

2005-09-21  Andy Wingo  <wingo@pobox.com>

	* testsuite/test_pad.py (PadProbeTest.testRemovingProbe): Add
	probe removal test. Passes, but some other test sporadically fails
	-- will check that later.

	* gst/gst.defs: Update for probe removal api

	* gst/gstpad.override (_wrap_gst_pad_remove_data_probe) 
	(_wrap_gst_pad_remove_event_probe) 
	(_wrap_gst_pad_remove_buffer_probe): Removed, upstream does the
	right thing now.
	(_wrap_gst_pad_add_data_probe, _wrap_gst_pad_add_event_probe) 
	(_wrap_gst_pad_add_buffer_probe): Indent.

2005-09-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst.defs:
	* gst/gststructure.override:
	* testsuite/test_struct.py:
	  add a .keys() method to gst.Structure, plus test

2005-09-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst.defs:
	* gst/gstbus.override:
	* testsuite/test_pipeline.py:
	* testsuite/test_bus.py:
	  fix up for new bus API

2005-09-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* gst/gst.defs:
	* gst/gst.override:
	* gst/gstmodule.c: (init_gst):
	* testsuite/test_registry.py:
	  update for new plugin API

2005-09-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst-types.defs:
	* gst/gst.override:
	* testsuite/test_registry.py:
	  commit intermediate wrapper updates

2005-09-16  Andy Wingo  <wingo@pobox.com>

	* gst/gst.defs (registry_get_default): Renamed from
	gst_registry_get_default.

2005-09-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst.defs:
	  remove a function that went away

2005-09-15  Andy Wingo  <wingo@pobox.com>

	* gst/gst-types.defs: 